[gd_scene load_steps=2 format=3 uid="uid://dj1117wcljoxq"]

[ext_resource type="Script" uid="uid://m8es45ro8je5" path="res://addons/zylann.translation_editor/tools/string_edition_dialog.gd" id="1"]

[node name="StringEditionDialog" type="AcceptDialog"]
title = "New string ID"
initial_position = 2
size = Vector2i(111, 88)
visible = true
unresizable = true
popup_window = true
extend_to_title = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="submit"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
